syntax = "proto3";

package documents;

// ========== PIECE JOINTE SERVICE ==========
service PieceJointeService {
  rpc Create(CreatePieceJointeRequest) returns (PieceJointe);
  rpc Update(UpdatePieceJointeRequest) returns (PieceJointe);
  rpc Get(GetPieceJointeRequest) returns (PieceJointe);
  rpc List(ListPieceJointeRequest) returns (ListPieceJointeResponse);
  rpc ListByEntite(ListPieceJointeByEntiteRequest) returns (ListPieceJointeResponse);
  rpc Delete(DeletePieceJointeRequest) returns (DeleteResponse);
}

message PieceJointe {
  string id = 1;
  string nom_fichier = 2;
  string url = 3;
  string type_mime = 4;
  int64 taille = 5;
  string entite_type = 6;
  string entite_id = 7;
  string date_upload = 8;
  string uploaded_by = 9;
  string created_at = 10;
  string updated_at = 11;
}

message CreatePieceJointeRequest {
  string nom_fichier = 1;
  string url = 2;
  string type_mime = 3;
  int64 taille = 4;
  string entite_type = 5;
  string entite_id = 6;
  string uploaded_by = 7;
}

message UpdatePieceJointeRequest {
  string id = 1;
  string nom_fichier = 2;
  string url = 3;
}

message GetPieceJointeRequest {
  string id = 1;
}

message ListPieceJointeRequest {
  string search = 1;
  string type_mime = 2;
  Pagination pagination = 3;
}

message ListPieceJointeByEntiteRequest {
  string entite_type = 1;
  string entite_id = 2;
  Pagination pagination = 3;
}

message DeletePieceJointeRequest {
  string id = 1;
}

message ListPieceJointeResponse {
  repeated PieceJointe pieces = 1;
  PaginationResult pagination = 2;
}

// ========== BOITE MAIL SERVICE ==========
service BoiteMailService {
  rpc Create(CreateBoiteMailRequest) returns (BoiteMail);
  rpc Update(UpdateBoiteMailRequest) returns (BoiteMail);
  rpc Get(GetBoiteMailRequest) returns (BoiteMail);
  rpc GetByUtilisateur(GetBoiteMailByUtilisateurRequest) returns (BoiteMail);
  rpc GetDefault(GetDefaultBoiteMailRequest) returns (BoiteMail);
  rpc List(ListBoiteMailRequest) returns (ListBoiteMailResponse);
  rpc ListByUtilisateur(ListBoiteMailByUtilisateurRequest) returns (ListBoiteMailResponse);
  rpc SetDefault(SetDefaultBoiteMailRequest) returns (BoiteMail);
  rpc Activer(ActivateBoiteMailRequest) returns (BoiteMail);
  rpc Desactiver(ActivateBoiteMailRequest) returns (BoiteMail);
  rpc UpdateOAuthTokens(UpdateOAuthTokensRequest) returns (BoiteMail);
  rpc TestConnection(TestConnectionRequest) returns (TestConnectionResponse);
  rpc Delete(DeleteBoiteMailRequest) returns (DeleteResponse);
}

message BoiteMail {
  string id = 1;
  string nom = 2;
  string adresse_email = 3;
  string fournisseur = 4;
  string type_connexion = 5;
  string serveur_smtp = 6;
  int32 port_smtp = 7;
  string serveur_imap = 8;
  int32 port_imap = 9;
  bool utilise_ssl = 10;
  bool utilise_tls = 11;
  string username = 12;
  string client_id = 13;
  string token_expiration = 14;
  string signature_html = 15;
  string signature_texte = 16;
  bool est_par_defaut = 17;
  bool actif = 18;
  string utilisateur_id = 19;
  string created_at = 20;
  string updated_at = 21;
}

message CreateBoiteMailRequest {
  string nom = 1;
  string adresse_email = 2;
  string fournisseur = 3;
  string type_connexion = 4;
  string serveur_smtp = 5;
  int32 port_smtp = 6;
  string serveur_imap = 7;
  int32 port_imap = 8;
  bool utilise_ssl = 9;
  bool utilise_tls = 10;
  string username = 11;
  string mot_de_passe = 12;
  string client_id = 13;
  string client_secret = 14;
  string signature_html = 15;
  string signature_texte = 16;
  bool est_par_defaut = 17;
  string utilisateur_id = 18;
}

message UpdateBoiteMailRequest {
  string id = 1;
  string nom = 2;
  string serveur_smtp = 3;
  int32 port_smtp = 4;
  string serveur_imap = 5;
  int32 port_imap = 6;
  bool utilise_ssl = 7;
  bool utilise_tls = 8;
  string username = 9;
  string mot_de_passe = 10;
  string signature_html = 11;
  string signature_texte = 12;
}

message GetBoiteMailRequest {
  string id = 1;
}

message GetBoiteMailByUtilisateurRequest {
  string utilisateur_id = 1;
}

message GetDefaultBoiteMailRequest {
  string utilisateur_id = 1;
}

message ListBoiteMailRequest {
  string search = 1;
  string fournisseur = 2;
  bool actif = 3;
  Pagination pagination = 4;
}

message ListBoiteMailByUtilisateurRequest {
  string utilisateur_id = 1;
  bool actif = 2;
  Pagination pagination = 3;
}

message SetDefaultBoiteMailRequest {
  string id = 1;
  string utilisateur_id = 2;
}

message ActivateBoiteMailRequest {
  string id = 1;
}

message UpdateOAuthTokensRequest {
  string id = 1;
  string access_token = 2;
  string refresh_token = 3;
  string token_expiration = 4;
}

message TestConnectionRequest {
  string id = 1;
}

message TestConnectionResponse {
  bool success = 1;
  string message = 2;
}

message DeleteBoiteMailRequest {
  string id = 1;
}

message ListBoiteMailResponse {
  repeated BoiteMail boites = 1;
  PaginationResult pagination = 2;
}

// ========== COMMON MESSAGES ==========
message Pagination {
  int32 page = 1;
  int32 limit = 2;
  string sort_by = 3;
  string sort_order = 4;
}

message PaginationResult {
  int32 total = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 total_pages = 4;
}

message DeleteResponse {
  bool success = 1;
}
